deploy/020-deployment.yaml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: quarkus-mqtt-integration-starter
  labels:
    app.kubernetes.io/name: quarkus-mqtt-integration-starter

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: quarkus-mqtt-integration-starter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: quarkus-mqtt-integration-starter
    spec:
      containers:
        - name: service
          image: ghcr.io/drogue-iot/quarkus-mqtt-integration-starter-jvm:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              port: 8080
              path: /health/live
          readinessProbe:
            httpGet:
              port: 8080
              path: /health/ready
